# memex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  test.py  tox.ini
api/: backup.txt  constants.py  main.py  test.py  utils.py
database/: auth.py  constants.py  main.py  model.py
extensions/: handle_make.py  option_gen.py
memex/: api.py  auth.py  auth_manager.py  cli.py  cli_handler.py  compiler.py  config.py  constants.py  display.py  entry.py  entry_manager.py  errors.py  main.py  models.py  remote.py  search.py  session.py  utils.py
memex/database/: auth.py  entry.py  main.py  model.py  models.py
plugins/: handle_make.py  option_gen.py
scripts/: benchmark.py  utils.py
tests/: conftest.py  test_api.py  test_cli.py  test_compiler.py  test_memex.py  utils.py
tests/benchmarking/: benchmark.py
tests/data-faker/: attribution.md  benchmark.py  test.py
tests/data-faker/data/: websites.txt
