[tool.poetry]
name = "memex"
version = "0.2.0"
description = "a personal libraries for all your memories"
authors = ["Nathaniel Cherian <me@nathanielc.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nathanielCherian/memex"
repository = "https://github.com/nathanielCherian/memex"
keywords = ["memex"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
Flask = "^2.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"

[tool.poetry.scripts]
memex = "bin.memex:main"
memex-api = "bin.memex_api:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
